--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -1,9 +1,13 @@
 dependencies:
-- name: exposecontroller
-  version: 2.3.89
+- alias: expose
+  name: exposecontroller
   repository: http://chartmuseum.jenkins-x.io
-  alias: expose
-- name: exposecontroller
   version: 2.3.89
+- alias: cleanup
+  name: exposecontroller
   repository: http://chartmuseum.jenkins-x.io
-  alias: cleanup
+  version: 2.3.89
+- alias: testdb
+  name: postgresql
+  repository: https://kubernetes-charts.storage.googleapis.com
+  version: 5.1.0
